fixed footer overlap in article page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -554,7 +554,7 @@ a {
     border: none;
     width: 100px;
     padding: 8px;
-    margin: 5px 5px 5px 0px;
+    margin: 5px 5px 75px 0px;
     background-color: #FF0000;
     color: white;
 }
